# scikit-beam

./: .buildinfo  .coveragerc  .directory  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README-GIT  README.md  README.rst  api_changes.html  contributing.txt  dev-requirements.txt  genindex.html  getting_started.html  index.html  install.html  installation.html  introduction.html  known_issues.html  objects.inv  optional-requirements.txt  overview.html  pyproject.toml  python_versions.html  requirements-dev.txt  requirements-doc.txt  requirements-optional.txt  requirements.txt  run_tests.py  search.html  searchindex.js  (+10 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
_sources/: getting_started.rst.txt  warnings.rst.txt
_static/: documentation_options.js
api_changes/: 2014-08-29-gridder.html  2014-09-03-gridder.html  2014-09-04-constants.html  2014-09-04-constants.rst  2014-09-08_fit_quad_to_peak.html  2014-09-09-physics_peak.html  (+12 more)
skbeam/core/accumulators/: AngularIntegrationM.py  CMakeLists.txt  angularIntegrator.py  arrayIntegrator.py  arrayProjector.py  bin_image.py  binned_statistic.py  droplet.pyx  histogram.pyx  projector.py  projectorexamples.py  timings.py
skbeam/core/accumulators/tests/: test_AngularIntegrator.py  test_angularIntegrator.py  test_arrayIntegrator.py  test_arrayProjector.py  test_bin_image.py  test_binned_statistic.py  test_histogram.py  test_projector.py
src/: CMakeLists.txt  ctrans.c  ctrans.h  droplet.c  hunt.c
(+951 files in other folders)
