[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "skbeam",
]

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]

[tool.black]
line-length = 115
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | versioneer.py
)
'''
